--- a/main.html
+++ b/main.html
@@ -7,10 +7,37 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<header>Avengers: Endgame</header>
+	<br>
+	<nav>
+		<section id="nav-actor"><a href="">Actors</a></section>
+		<section id="nav-quote"><a href="">Quotes</a></section>
+	</nav>
+	<br>
+	<h4>Summary</h4>
+	<summary>Adrift in space with no food or water, Tony Stark sends a message to Pepper Potts as his oxygen supply starts to dwindle. Meanwhile, the remaining Avengers -- Thor, Black Widow, Captain America and Bruce Banner -- must figure out a way to bring back their vanquished allies for an epic showdown with Thanos -- the evil demigod who decimated the planet and the universe.</summary>
+    <br>
+	<section id="actor">
+	<ul>
+		<li>Robert Downy Jr</li>
+		<li>Chris Hemsworth</li>
+		<li>Scarlett Johansson</li>
+	</ul>
+	</section>
+	<section id="quote">
+		<ul>
+			<li>Avengers Assemble</li>
+			<li>I love you 3000</li>
+			<li>Lets do Time Heist</li>
+		</ul>
+	</section>
+	
+
+	<aside>IMDb RATING: 8.4	</aside>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
-
+<br>
+<footer>Produced by: Anthony Russo Joe Russo</footer>
 </html>
