--- a/main.html
+++ b/main.html
@@ -33,11 +33,15 @@
 	</section>
 	
 
-	<aside>IMDb RATING: 8.4	</aside>
+	<aside>
+		<h5>IMDb RATING: 8.4⭐</h5>
+		<p>Release Date: 26 April 2019</p>
+	</aside>
 	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
 <br>
-<footer>Produced by: Anthony Russo Joe Russo</footer>
+<footer>
+	<p>Produced by: Anthony Russo Joe Russo</p> </footer>
 </html>
