--- a/main.html
+++ b/main.html
@@ -31,17 +31,11 @@
 			<li>Lets do Time Heist</li>
 		</ul>
 	</section>
-	
-
 	<aside>
 		<h5>IMDb RATING: 8.4⭐</h5>
 		<p>Release Date: 26 April 2019</p>
 	</aside>
-	<script type="text/javascript" src="./script.js">
-</script>
-
 </body>
 <br>
-<footer>
-	<p>Produced by: Anthony Russo Joe Russo</p> </footer>
+<footer>Produced by: Anthony Russo Joe Russo </footer>
 </html>
