--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
 <body>
 	<header>Avengers: Endgame</header>
 	<br>
-		<nav id="nav-actor"><a href="">Actors</a></nav>
-		<nav id="nav-quote"><a href="">Quotes</a></nav>
+		<nav id="nav-actor"><a href="#actor">Actors</a></nav>
+		<nav id="nav-quote"><a href="#quote">Quotes</a></nav>
 	<br>
 	<h4>Summary</h4>
 	<summary>Adrift in space with no food or water, Tony Stark sends a message to Pepper Potts as his oxygen supply starts to dwindle. Meanwhile, the remaining Avengers -- Thor, Black Widow, Captain America and Bruce Banner -- must figure out a way to bring back their vanquished allies for an epic showdown with Thanos -- the evil demigod who decimated the planet and the universe.</summary>
