--- a/main.html
+++ b/main.html
@@ -9,8 +9,10 @@
 <body>
 	<header>Avengers: Endgame</header>
 	<br>
-		<nav id="nav-actor"><a href="#actor">Actors</a></nav>
-		<nav id="nav-quote"><a href="#quote">Quotes</a></nav>
+	<nav>
+		<a href="#actor" id="nav-actor">Actors</a>
+		<a href="#quote" id="nav-quote">Quotes</a>
+	</nav>
 	<br>
 	<h4>Summary</h4>
 	<summary>Adrift in space with no food or water, Tony Stark sends a message to Pepper Potts as his oxygen supply starts to dwindle. Meanwhile, the remaining Avengers -- Thor, Black Widow, Captain America and Bruce Banner -- must figure out a way to bring back their vanquished allies for an epic showdown with Thanos -- the evil demigod who decimated the planet and the universe.</summary>
@@ -33,7 +35,8 @@
 		<h5>IMDb RATING: 8.4⭐</h5>
 		<p>Release Date: 26 April 2019</p>
 	</aside>
+	<footer>Produced by: Anthony Russo Joe Russo </footer>
 </body>
 <br>
-<footer>Produced by: Anthony Russo Joe Russo </footer>
+
 </html>
